<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/difficulty" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:minHeight="48dip"
        android:minWidth="170dip"
        android:onClick="easyButtonClick"
        android:text="@string/easy" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/easyButton"
        android:layout_below="@+id/easyButton"
        android:layout_marginTop="14dp"
        android:minHeight="48dip"
        android:minWidth="170dip"
        android:onClick="mediumButtonClick"
        android:text="@string/medium" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mediumButton"
        android:layout_below="@+id/mediumButton"
        android:layout_marginTop="15dp"
        android:minHeight="48dip"
        android:minWidth="170dip"
        android:onClick="hardButtonClick"
        android:text="@string/hard" />

   
</RelativeLayout>
