<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TabHost
        android:id="@+id/my_tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dip"
                android:minWidth="300dip" >

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RelativeLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/easyString"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="0.32"
                        android:text="@string/easy"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/easyFirst"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/easyString"
                        android:layout_weight="0.32"
                        android:text="1"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/easySecond"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/easyFirst"
                        android:layout_weight="0.32"
                        android:text="2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/easyThird"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/easySecond"
                        android:layout_weight="0.32"
                        android:text="3"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <TextView
                        android:id="@+id/mediumString"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="0.32"
                        android:text="@string/medium"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/mediumFirst"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/mediumString"
                        android:layout_weight="0.32"
                        android:text="1"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/mediumSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/mediumFirst"
                        android:layout_weight="0.32"
                        android:text="2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/mediumThird"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/mediumSecond"
                        android:layout_weight="0.32"
                        android:text="3"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <TextView
                        android:id="@+id/hardString"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="0.32"
                        android:text="@string/hard"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/hardFirst"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/hardString"
                        android:layout_weight="0.32"
                        android:text="1"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/hardSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/hardFirst"
                        android:layout_weight="0.32"
                        android:text="2"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/hardThird"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/hardSecond"
                        android:layout_weight="0.32"
                        android:text="3"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>